Instanciación dinámica siempre a través del constructor